--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-type-animation": "^3.2.0",
-    "resend": "^6.0.1"
+    "resend": "^6.0.1",
+    "sweetalert2": "^11.22.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
