--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
+    "@heroicons/react": "^2.2.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "next": "15.4.7",
